# List

./: CMakeLists.txt  README.md
src/: details.c  details.h  list.c  list.h  main.c  test.h  types.h
